fixed color contrast issures on button

--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -128,6 +128,7 @@ button {
 
 #course-tabs .done {
     background-color: var(--secondary-color);
+    color: var(--white);
 }
 
 footer {
